// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrowWrapper Component should ArrowWrapper Component mount success 1`] = `
.c2 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-style: normal;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  width: 1em;
  height: 1em;
  overflow: hidden;
  fill: currentColor;
}

.c0 {
  width: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-left: 1px solid rgba(227,227,227,1);
  text-align: center;
  height: 100%;
}

.c1 {
  color: rgba(204,204,204,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  width: 100%;
}

.c1:hover {
  color: rgba(191,191,191,1);
  height: 100%;
}

.c1:active {
  color: rgba(191,191,191,1);
  height: 100%;
  background-color: rgba(248,248,248,1);
}

.c1:not(:last-child) {
  border-bottom: 1px solid rgba(227,227,227,1);
}

.c1 > svg {
  position: relative;
  width: 8px;
  height: 8px;
}

.c3 {
  color: rgba(204,204,204,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  width: 100%;
}

.c3:hover {
  color: rgba(191,191,191,1);
  height: 100%;
}

.c3:active {
  color: rgba(191,191,191,1);
  height: 100%;
  background-color: rgba(248,248,248,1);
}

.c3:not(:last-child) {
  border-bottom: 1px solid rgba(227,227,227,1);
}

.c3 > svg {
  position: relative;
  width: 8px;
  height: 8px;
}

<div
  className="c0"
  size="m"
>
  <div
    className="c1"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    size="m"
  >
    <svg
      aria-hidden="false"
      className="c2"
      focusable="false"
      viewBox="0 0 1024 1024"
    >
      <path
        d="M832.267 778.667H189.46a21.333 21.333 0 01-17.685-33.259l306.09-453.76a21.333 21.333 0 0134.817-.779L849.387 744.64a21.333 21.333 0 01-17.12 34.027z"
      />
    </svg>
  </div>
  <div
    className="c3"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    size="m"
  >
    <svg
      aria-hidden="false"
      className="c2"
      focusable="false"
      viewBox="0 0 1024 1024"
    >
      <path
        d="M832.267 277.333H189.46a21.333 21.333 0 00-17.685 33.259l306.09 453.76a21.333 21.333 0 0034.817.779L849.387 311.36a21.333 21.333 0 00-17.12-34.027z"
      />
    </svg>
  </div>
</div>
`;

exports[`ArrowWrapper Component should arrowDisabled change style 1`] = `
Array [
  .c2 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-style: normal;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  width: 1em;
  height: 1em;
  overflow: hidden;
  fill: currentColor;
}

.c0 {
  width: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-left: 1px solid rgba(227,227,227,1);
  text-align: center;
  height: 100%;
}

.c1 {
  color: rgba(204,204,204,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  width: 100%;
  cursor: not-allowed;
  background-color: rgba(250,250,250,1);
}

.c1:hover {
  color: rgba(191,191,191,1);
  height: 100%;
}

.c1:active {
  color: rgba(191,191,191,1);
  height: 100%;
  background-color: rgba(248,248,248,1);
}

.c1:not(:last-child) {
  border-bottom: 1px solid rgba(227,227,227,1);
}

.c1 > svg {
  position: relative;
  width: 8px;
  height: 8px;
}

.c3 {
  color: rgba(204,204,204,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  width: 100%;
}

.c3:hover {
  color: rgba(191,191,191,1);
  height: 100%;
}

.c3:active {
  color: rgba(191,191,191,1);
  height: 100%;
  background-color: rgba(248,248,248,1);
}

.c3:not(:last-child) {
  border-bottom: 1px solid rgba(227,227,227,1);
}

.c3 > svg {
  position: relative;
  width: 8px;
  height: 8px;
}

<div
    className="c0"
    size="m"
  >
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      size="m"
    >
      <svg
        aria-hidden="false"
        className="c2"
        focusable="false"
        viewBox="0 0 1024 1024"
      >
        <path
          d="M832.267 778.667H189.46a21.333 21.333 0 01-17.685-33.259l306.09-453.76a21.333 21.333 0 0134.817-.779L849.387 744.64a21.333 21.333 0 01-17.12 34.027z"
        />
      </svg>
    </div>
    <div
      className="c3"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      size="m"
    >
      <svg
        aria-hidden="false"
        className="c2"
        focusable="false"
        viewBox="0 0 1024 1024"
      >
        <path
          d="M832.267 277.333H189.46a21.333 21.333 0 00-17.685 33.259l306.09 453.76a21.333 21.333 0 0034.817.779L849.387 311.36a21.333 21.333 0 00-17.12-34.027z"
        />
      </svg>
    </div>
  </div>,
  .c2 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-style: normal;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  width: 1em;
  height: 1em;
  overflow: hidden;
  fill: currentColor;
}

.c0 {
  width: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-left: 1px solid rgba(227,227,227,1);
  text-align: center;
  height: 100%;
}

.c1 {
  color: rgba(204,204,204,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  width: 100%;
}

.c1:hover {
  color: rgba(191,191,191,1);
  height: 100%;
}

.c1:active {
  color: rgba(191,191,191,1);
  height: 100%;
  background-color: rgba(248,248,248,1);
}

.c1:not(:last-child) {
  border-bottom: 1px solid rgba(227,227,227,1);
}

.c1 > svg {
  position: relative;
  width: 8px;
  height: 8px;
}

.c3 {
  color: rgba(204,204,204,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  width: 100%;
  cursor: not-allowed;
  background-color: rgba(250,250,250,1);
}

.c3:hover {
  color: rgba(191,191,191,1);
  height: 100%;
}

.c3:active {
  color: rgba(191,191,191,1);
  height: 100%;
  background-color: rgba(248,248,248,1);
}

.c3:not(:last-child) {
  border-bottom: 1px solid rgba(227,227,227,1);
}

.c3 > svg {
  position: relative;
  width: 8px;
  height: 8px;
}

<div
    className="c0"
    size="m"
  >
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      size="m"
    >
      <svg
        aria-hidden="false"
        className="c2"
        focusable="false"
        viewBox="0 0 1024 1024"
      >
        <path
          d="M832.267 778.667H189.46a21.333 21.333 0 01-17.685-33.259l306.09-453.76a21.333 21.333 0 0134.817-.779L849.387 744.64a21.333 21.333 0 01-17.12 34.027z"
        />
      </svg>
    </div>
    <div
      className="c3"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      size="m"
    >
      <svg
        aria-hidden="false"
        className="c2"
        focusable="false"
        viewBox="0 0 1024 1024"
      >
        <path
          d="M832.267 277.333H189.46a21.333 21.333 0 00-17.685 33.259l306.09 453.76a21.333 21.333 0 0034.817.779L849.387 311.36a21.333 21.333 0 00-17.12-34.027z"
        />
      </svg>
    </div>
  </div>,
]
`;

exports[`ArrowWrapper Component should mouseLeave and enter change style 1`] = `
.c2 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-style: normal;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  width: 1em;
  height: 1em;
  overflow: hidden;
  fill: currentColor;
}

.c0 {
  width: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-left: 1px solid rgba(227,227,227,1);
  text-align: center;
  height: 100%;
}

.c1 {
  color: rgba(204,204,204,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  width: 100%;
}

.c1:hover {
  color: rgba(191,191,191,1);
  height: 100%;
}

.c1:active {
  color: rgba(191,191,191,1);
  height: 100%;
  background-color: rgba(248,248,248,1);
}

.c1:not(:last-child) {
  border-bottom: 1px solid rgba(227,227,227,1);
}

.c1 > svg {
  position: relative;
  width: 8px;
  height: 8px;
}

.c3 {
  color: rgba(204,204,204,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  width: 100%;
}

.c3:hover {
  color: rgba(191,191,191,1);
  height: 100%;
}

.c3:active {
  color: rgba(191,191,191,1);
  height: 100%;
  background-color: rgba(248,248,248,1);
}

.c3:not(:last-child) {
  border-bottom: 1px solid rgba(227,227,227,1);
}

.c3 > svg {
  position: relative;
  width: 8px;
  height: 8px;
}

<div
  className="c0"
  size="m"
>
  <div
    className="c1"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    size="m"
  >
    <svg
      aria-hidden="false"
      className="c2"
      focusable="false"
      viewBox="0 0 1024 1024"
    >
      <path
        d="M832.267 778.667H189.46a21.333 21.333 0 01-17.685-33.259l306.09-453.76a21.333 21.333 0 0134.817-.779L849.387 744.64a21.333 21.333 0 01-17.12 34.027z"
      />
    </svg>
  </div>
  <div
    className="c3"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    size="m"
  >
    <svg
      aria-hidden="false"
      className="c2"
      focusable="false"
      viewBox="0 0 1024 1024"
    >
      <path
        d="M832.267 277.333H189.46a21.333 21.333 0 00-17.685 33.259l306.09 453.76a21.333 21.333 0 0034.817.779L849.387 311.36a21.333 21.333 0 00-17.12-34.027z"
      />
    </svg>
  </div>
</div>
`;

exports[`ArrowWrapper Component should mouseLeave and enter change style 2`] = `
.c2 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-style: normal;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  width: 1em;
  height: 1em;
  overflow: hidden;
  fill: currentColor;
}

.c0 {
  width: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-left: 1px solid rgba(227,227,227,1);
  text-align: center;
  height: 100%;
}

.c1 {
  color: rgba(204,204,204,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  width: 100%;
}

.c1:hover {
  color: rgba(191,191,191,1);
  height: 100%;
}

.c1:active {
  color: rgba(191,191,191,1);
  height: 100%;
  background-color: rgba(248,248,248,1);
}

.c1:not(:last-child) {
  border-bottom: 1px solid rgba(227,227,227,1);
}

.c1 > svg {
  position: relative;
  width: 8px;
  height: 8px;
}

.c3 {
  color: rgba(204,204,204,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  width: 100%;
}

.c3:hover {
  color: rgba(191,191,191,1);
  height: 100%;
}

.c3:active {
  color: rgba(191,191,191,1);
  height: 100%;
  background-color: rgba(248,248,248,1);
}

.c3:not(:last-child) {
  border-bottom: 1px solid rgba(227,227,227,1);
}

.c3 > svg {
  position: relative;
  width: 8px;
  height: 8px;
}

<div
  className="c0"
  size="m"
>
  <div
    className="c1"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    size="m"
  >
    <svg
      aria-hidden="false"
      className="c2"
      focusable="false"
      viewBox="0 0 1024 1024"
    >
      <path
        d="M832.267 778.667H189.46a21.333 21.333 0 01-17.685-33.259l306.09-453.76a21.333 21.333 0 0134.817-.779L849.387 744.64a21.333 21.333 0 01-17.12 34.027z"
      />
    </svg>
  </div>
  <div
    className="c3"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    size="m"
  >
    <svg
      aria-hidden="false"
      className="c2"
      focusable="false"
      viewBox="0 0 1024 1024"
    >
      <path
        d="M832.267 277.333H189.46a21.333 21.333 0 00-17.685 33.259l306.09 453.76a21.333 21.333 0 0034.817.779L849.387 311.36a21.333 21.333 0 00-17.12-34.027z"
      />
    </svg>
  </div>
</div>
`;

exports[`ArrowWrapper Component should render different size 1`] = `
Array [
  .c2 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-style: normal;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  width: 1em;
  height: 1em;
  overflow: hidden;
  fill: currentColor;
}

.c0 {
  width: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-left: 1px solid rgba(227,227,227,1);
  text-align: center;
  height: 100%;
}

.c1 {
  color: rgba(204,204,204,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  width: 100%;
}

.c1:hover {
  color: rgba(191,191,191,1);
  height: 100%;
}

.c1:active {
  color: rgba(191,191,191,1);
  height: 100%;
  background-color: rgba(248,248,248,1);
}

.c1:not(:last-child) {
  border-bottom: 1px solid rgba(227,227,227,1);
}

.c1 > svg {
  position: relative;
  width: 8px;
  height: 8px;
}

.c3 {
  color: rgba(204,204,204,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  width: 100%;
}

.c3:hover {
  color: rgba(191,191,191,1);
  height: 100%;
}

.c3:active {
  color: rgba(191,191,191,1);
  height: 100%;
  background-color: rgba(248,248,248,1);
}

.c3:not(:last-child) {
  border-bottom: 1px solid rgba(227,227,227,1);
}

.c3 > svg {
  position: relative;
  width: 8px;
  height: 8px;
}

<div
    className="c0"
    size="m"
  >
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      size="m"
    >
      <svg
        aria-hidden="false"
        className="c2"
        focusable="false"
        viewBox="0 0 1024 1024"
      >
        <path
          d="M832.267 778.667H189.46a21.333 21.333 0 01-17.685-33.259l306.09-453.76a21.333 21.333 0 0134.817-.779L849.387 744.64a21.333 21.333 0 01-17.12 34.027z"
        />
      </svg>
    </div>
    <div
      className="c3"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      size="m"
    >
      <svg
        aria-hidden="false"
        className="c2"
        focusable="false"
        viewBox="0 0 1024 1024"
      >
        <path
          d="M832.267 277.333H189.46a21.333 21.333 0 00-17.685 33.259l306.09 453.76a21.333 21.333 0 0034.817.779L849.387 311.36a21.333 21.333 0 00-17.12-34.027z"
        />
      </svg>
    </div>
  </div>,
  .c2 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-style: normal;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  width: 1em;
  height: 1em;
  overflow: hidden;
  fill: currentColor;
}

.c0 {
  width: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-left: 1px solid rgba(227,227,227,1);
  text-align: center;
  height: 100%;
}

.c1 {
  color: rgba(204,204,204,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  width: 100%;
}

.c1:hover {
  color: rgba(191,191,191,1);
  height: 100%;
}

.c1:active {
  color: rgba(191,191,191,1);
  height: 100%;
  background-color: rgba(248,248,248,1);
}

.c1:not(:last-child) {
  border-bottom: 1px solid rgba(227,227,227,1);
}

.c1 > svg {
  position: relative;
  width: 8px;
  height: 8px;
}

.c3 {
  color: rgba(204,204,204,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  width: 100%;
}

.c3:hover {
  color: rgba(191,191,191,1);
  height: 100%;
}

.c3:active {
  color: rgba(191,191,191,1);
  height: 100%;
  background-color: rgba(248,248,248,1);
}

.c3:not(:last-child) {
  border-bottom: 1px solid rgba(227,227,227,1);
}

.c3 > svg {
  position: relative;
  width: 8px;
  height: 8px;
}

<div
    className="c0"
    size="s"
  >
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      size="s"
    >
      <svg
        aria-hidden="false"
        className="c2"
        focusable="false"
        viewBox="0 0 1024 1024"
      >
        <path
          d="M832.267 778.667H189.46a21.333 21.333 0 01-17.685-33.259l306.09-453.76a21.333 21.333 0 0134.817-.779L849.387 744.64a21.333 21.333 0 01-17.12 34.027z"
        />
      </svg>
    </div>
    <div
      className="c3"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      size="s"
    >
      <svg
        aria-hidden="false"
        className="c2"
        focusable="false"
        viewBox="0 0 1024 1024"
      >
        <path
          d="M832.267 277.333H189.46a21.333 21.333 0 00-17.685 33.259l306.09 453.76a21.333 21.333 0 0034.817.779L849.387 311.36a21.333 21.333 0 00-17.12-34.027z"
        />
      </svg>
    </div>
  </div>,
  .c2 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-style: normal;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  width: 1em;
  height: 1em;
  overflow: hidden;
  fill: currentColor;
}

.c0 {
  width: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-left: 1px solid rgba(227,227,227,1);
  text-align: center;
  height: 100%;
}

.c1 {
  color: rgba(204,204,204,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  width: 100%;
}

.c1:hover {
  color: rgba(191,191,191,1);
  height: 100%;
}

.c1:active {
  color: rgba(191,191,191,1);
  height: 100%;
  background-color: rgba(248,248,248,1);
}

.c1:not(:last-child) {
  border-bottom: 1px solid rgba(227,227,227,1);
}

.c1 > svg {
  position: relative;
  width: 10px;
  height: 10px;
}

.c3 {
  color: rgba(204,204,204,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  width: 100%;
}

.c3:hover {
  color: rgba(191,191,191,1);
  height: 100%;
}

.c3:active {
  color: rgba(191,191,191,1);
  height: 100%;
  background-color: rgba(248,248,248,1);
}

.c3:not(:last-child) {
  border-bottom: 1px solid rgba(227,227,227,1);
}

.c3 > svg {
  position: relative;
  width: 10px;
  height: 10px;
}

<div
    className="c0"
    size="l"
  >
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      size="l"
    >
      <svg
        aria-hidden="false"
        className="c2"
        focusable="false"
        viewBox="0 0 1024 1024"
      >
        <path
          d="M832.267 778.667H189.46a21.333 21.333 0 01-17.685-33.259l306.09-453.76a21.333 21.333 0 0134.817-.779L849.387 744.64a21.333 21.333 0 01-17.12 34.027z"
        />
      </svg>
    </div>
    <div
      className="c3"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      size="l"
    >
      <svg
        aria-hidden="false"
        className="c2"
        focusable="false"
        viewBox="0 0 1024 1024"
      >
        <path
          d="M832.267 277.333H189.46a21.333 21.333 0 00-17.685 33.259l306.09 453.76a21.333 21.333 0 0034.817.779L849.387 311.36a21.333 21.333 0 00-17.12-34.027z"
        />
      </svg>
    </div>
  </div>,
  .c2 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-style: normal;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  width: 1em;
  height: 1em;
  overflow: hidden;
  fill: currentColor;
}

.c0 {
  width: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-left: 1px solid rgba(227,227,227,1);
  text-align: center;
  height: 100%;
}

.c1 {
  color: rgba(204,204,204,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  width: 100%;
}

.c1:hover {
  color: rgba(191,191,191,1);
  height: 100%;
}

.c1:active {
  color: rgba(191,191,191,1);
  height: 100%;
  background-color: rgba(248,248,248,1);
}

.c1:not(:last-child) {
  border-bottom: 1px solid rgba(227,227,227,1);
}

.c1 > svg {
  position: relative;
  width: 10px;
  height: 10px;
}

.c3 {
  color: rgba(204,204,204,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  width: 100%;
}

.c3:hover {
  color: rgba(191,191,191,1);
  height: 100%;
}

.c3:active {
  color: rgba(191,191,191,1);
  height: 100%;
  background-color: rgba(248,248,248,1);
}

.c3:not(:last-child) {
  border-bottom: 1px solid rgba(227,227,227,1);
}

.c3 > svg {
  position: relative;
  width: 10px;
  height: 10px;
}

<div
    className="c0"
    size="xl"
  >
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      size="xl"
    >
      <svg
        aria-hidden="false"
        className="c2"
        focusable="false"
        viewBox="0 0 1024 1024"
      >
        <path
          d="M832.267 778.667H189.46a21.333 21.333 0 01-17.685-33.259l306.09-453.76a21.333 21.333 0 0134.817-.779L849.387 744.64a21.333 21.333 0 01-17.12 34.027z"
        />
      </svg>
    </div>
    <div
      className="c3"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      size="xl"
    >
      <svg
        aria-hidden="false"
        className="c2"
        focusable="false"
        viewBox="0 0 1024 1024"
      >
        <path
          d="M832.267 277.333H189.46a21.333 21.333 0 00-17.685 33.259l306.09 453.76a21.333 21.333 0 0034.817.779L849.387 311.36a21.333 21.333 0 00-17.12-34.027z"
        />
      </svg>
    </div>
  </div>,
]
`;
